# src/main/kotlin/uk/gov/justice/digital/hmpps/hmppsaccreditedprogrammesapi/participationhistory/domain/CourseParticipationHistoryUpdate.kt
@@ -1,0 +1,12 @@
+package uk.gov.justice.digital.hmpps.hmppsaccreditedprogrammesapi.participationhistory.domain
+
+import java.time.Year
+import java.util.UUID
+
+data class CourseParticipationHistoryUpdate(
+  val courseId: UUID? = null,
+  val otherCourseName: String?,
+  val yearStarted: Year?,
+  val setting: CourseSetting?,
+  val outcome: CourseOutcome?,
+)
